# evade84-node

./: .env  .env.example  .flake8  .gitignore  Dockerfile  LICENSE  README.md  debug.env  docker-compose.yml  pyproject.toml
node/: __init__.py  auth.py  config.py  crud.py  enums.py  exceptions.py  main.py  pagination.py  router.py  slicing.py  util.py  validators.py
node/models/: __init__.py  body.py  database.py  db.py  request.py  response.py
node/routers/: node.py  pool.py  root.py  signature.py
node/templates/: root.html
