[project]
name = ""
version = ""
description = ""
authors = [
    {name = "jieggii", email = "jieggii.contact@gmail.com"},
]
dependencies = [
    "fastapi>=0.78.0",
    "uvicorn[standard]>=0.17.6",
    "beanie>=1.11.1",
    "motor>=2.5.1",
    "betterconf>=2.6.1",
    "argon2-cffi>=21.3.0",
    "loguru>=0.6.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[tool]
[tool.pdm]

[tool.pdm.scripts]
start.cmd = "uvicorn node.main:app --reload"
start.env_file = ".env"

fmt.shell = "isort node/ && black node/"

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.10.1",
    "black>=22.3.0",
]
[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
